--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=123456
 keyPassword=123456
 keyAlias=upload
-storeFile=/Users/bahaahussein/Lamasuu projects/schools/BBIS-Nasim/BBISnasim.jks
+storeFile=../../BBISnasim.jks
