--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/ali/Library/Android/sdk
-flutter.sdk=/Users/ali/development/flutter
-flutter.buildMode=debug
-flutter.versionName=1.0.3
-flutter.versionCode=5
+sdk.dir=C:\\Users\\msi\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
+flutter.buildMode=release
+flutter.versionName=1.0.5
+flutter.versionCode=9
