--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 
 # IOS version
-version: 1.0.5+1
+version: 1.0.5+9
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -44,11 +44,11 @@ dependencies:
   card_swiper: ^3.0.1
   http: ^1.1.0
   crypto: ^3.0.3
-  device_info_plus: ^10.1.1
+  device_info_plus: ^11.5.0
   modal_bottom_sheet: ^3.0.0-pre
   photo_view: ^0.15.0
   #flutter_cached_pdfview: ^0.4.1
-  syncfusion_flutter_pdfviewer: ^26.2.7
+  syncfusion_flutter_pdfviewer: ^30.2.6
   firebase_core: ^3.3.0
   firebase_messaging: ^15.0.4
   flutter_local_notifications: ^17.2.1+2
@@ -63,7 +63,7 @@ dependencies:
   google_maps_flutter: ^2.3.1
   geolocator: ^12.0.0
   location: ^7.0.0
-  empty_widget: ^0.0.5
+  empty_widget_pro: ^0.0.5
   file_picker: ^8.0.6
   #flutter_pdfview: ^1.3.0
   #parse_server_sdk_flutter: ^3.1.0
@@ -89,7 +89,7 @@ dependencies:
   flutter_arc_speed_dial: ^2.0.1
   loader_overlay: ^4.0.1
   flutter_awesome_select_clone: ^7.5.0
-  image_gallery_saver: ^2.0.3
+  image_gallery_saver_plus: ^4.0.1
   dots_indicator: ^3.0.0
   flutter_device_id: ^1.0.1
 
@@ -99,13 +99,12 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   path_provider: ^2.1.1
-  background_location: ^0.13.0
   permission_handler: ^11.0.0
   mime: ^1.0.4
   flutter_linkify: ^6.0.0
   file_saver: ^0.2.12
 
-  upgrader: ^10.3.0
+  upgrader: ^11.5.0
   restart_app: ^1.2.1
   open_file: ^3.5.3
   shared_preferences: ^2.3.2
