--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\msi\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/Users/ali/Library/Android/sdk
+flutter.sdk=/Users/ali/development/flutter
 flutter.buildMode=release
 flutter.versionName=1.0.5
-flutter.versionCode=9
+flutter.versionCode=11
