--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 
 # IOS version
-version: 1.0.5+11
+version: 1.1.0+1
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -108,6 +108,7 @@ dependencies:
   restart_app: ^1.2.1
   open_file: ^3.5.3
   shared_preferences: ^2.3.2
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
